@@ -22,14 +22,14 @@
 /m4/ltsugar.m4
 /m4/ltversion.m4
 /m4/lt~obsolete.m4
+/perl/Build
+/perl/Build.PL
 /perl/MANIFEST.bak
+/perl/MYMETA.json
 /perl/MYMETA.yml
-/perl/Makefile.PL
-/perl/Makefile.old
-/perl/WebAuth.bs
-/perl/WebAuth.c
+/perl/_build/
+/perl/lib/WebAuth.c
 /perl/blib/
-/perl/pm_to_blib
 /perl/t/data/test.keytab
 /perl/t/data/test.password
 /perl/t/data/test.principal
