@@ -2,9 +2,9 @@
                   (site-wide web authentication system)
 
   Copyright 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
-  2012 The Board of Trustees of the Leland Stanford Junior University.
-  This software is distributed under a BSD-style license.  Please see the
-  section LICENSE below for more information.
+  2012, 2013 The Board of Trustees of the Leland Stanford Junior
+  University.  This software is distributed under a BSD-style license.
+  Please see the section LICENSE below for more information.
 
 BLURB
 
@@ -124,13 +124,18 @@ REQUIREMENTS
       CGI::Application::Plugin::Forward
       CGI::Application::Plugin::Redirect
       CGI::Application::Plugin::TT
-      libwww (LWP)
       IO::Socket::SSL
-        -or- Crypt::SSLeay (for LWP https support)
-      MIME::Base64 (part of Perl itself since 5.7.3)
+      libwww (LWP)
       Template (Template Toolkit)
       URI
       XML::Parser
+
+  Perl 5.10 or later is recommended.  If you are using an older version of
+  Perl, you will additionally need the following modules to build
+  WebLogin, but not to run it:
+
+      ExtUtils::CBuilder
+      Module::Build
 
   Some mechanism for running FastCGI scripts under Apache, such as
   mod_fcgi or mod_fastcgi, is also recommended to improve performance of
