@@ -15,6 +15,13 @@ WebAuth 4.4.1 (unreleased)
     avoids reinitializing the Template Toolkit and reopening memcached
     connections for each query.
 
+    WebLogin and the WebAuth Perl bindings are now built with
+    Module::Build instead of ExtUtils::MakeMaker.  This should be
+    transparent to anyone not working with the source code, but
+    Module::Build and ExtUtils::CBuilder are now required to build the
+    WebLogin code.  They are included in Perl 5.10 or later and can be
+    installed separately for older versions of Perl.
+
 WebAuth 4.4.0 (2012-12-19)
 
     The WebKDC and WebLogin server now support allowing a user to assert
